@@ -1,12 +1,10 @@
 == ToDo ==
 
-* clean up some rough edges.
-
+* replace current gui code with ui files
 * fix cos 90 != 0 bug (only in double version of compile)
-* fix too many digits problem with hex/bin mode
-* do major cleanups
 * get rid of so much global variable/function usage
 * what is point of Dummy.h
+
 
   
 
