@@ -1,3 +1,9 @@
+2003-02-11 Evan Teran <emt3734@rit.edu>
+	* replaced cheasy stack with STL stack classes (it really should have been
+	  two stacks, but was mushed into one with a linked list dividing content)
+	* made it use new headers (no .h) when _ISOC99_SOURCE is defined
+	* added replace current gui code with ui files to TODO list
+
 2002-05-10 Evan Teran <emt3734@rit.edu>
 	* altered makefile to remove building of it as a library then linking that
 	to a dummy object file, this was silly and caused inclusion of an uneeded
